--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cubecobra",
-  "version": "1.0.0",
+  "version": "1.0.6",
   "description": "",
   "private": true,
   "main": "app.js",
@@ -8,46 +8,47 @@
     "node": ">=20.0.0 <21.0.0"
   },
   "scripts": {
-    "build": "yarn run nearley && yarn run sass && tsc -b && yarn run webpack && npx tailwindcss -i ./src/css/stylesheet.css -o ./public/css/stylesheet.css",
-    "lint": "yarn run prettier-base --check && yarn run eslint --max-warnings 0",
+    "build": "npm run nearley && tsc -b && npm run webpack && npx tailwindcss -i ./src/css/stylesheet.css -o ./public/css/stylesheet.css",
+    "lint": "npm run prettier-base --check && npm run eslint --max-warnings 0",
     "bash": "bash",
-    "beautify": "yarn run prettier",
+    "beautify": "npm run prettier",
     "list-files": "bash -c 'shopt -s nullglob\n echo {__tests__,fixtures,jobs,models,one_shot_scripts,public/js,routes,serverjs,src}/{**/*,*}.{js,jsx,ts,tsx} {app,force_update,server}.js webpack.*.mjs eslint.config.mjs babel.config.mjs'",
-    "prettier-base": "prettier $(yarn run --silent list-files)",
-    "prettier": "yarn run prettier-base --write",
+    "prettier-base": "prettier $(npm run --silent list-files)",
+    "prettier": "npm run prettier-base --write",
     "prettier-master": "prettier --write $(git diff master --name-only | grep -E '.m?[jt]sx?$')",
     "prettier-head": "prettier --write $(git diff HEAD --name-only | grep -E '.m?[jt]sx?$')",
-    "eslint": "eslint --quiet $(yarn run --silent list-files)",
+    "eslint": "eslint --quiet $(npm run --silent list-files)",
     "nodemon": "nodemon --max-old-space-size=8192 --ignore src --ignore public --ignore private --ignore temp --ignore dist/pages --ignore __tests__",
-    "webpack": "webpack --mode development --config webpack.server.mjs",
+    "webpack": "NODE_OPTIONS=--max_old_space-size=18192 webpack --mode production --config webpack.prod.mjs",
     "webpack-dev-server": "npx webpack serve --config webpack.dev.mjs",
-    "test": "yarn run test-loud --silent",
-    "test:watch": "yarn run webpack --watch & yarn run test-loud --watch --verbose false",
+    "test": "npm run test-loud --silent",
+    "test:watch": "npm run webpack --watch & npm run test-loud --watch --verbose false",
     "nearley": "sh nearley/helper.sh",
-    "ci-build": "yarn run nearley && yarn run sass && tsc -b && NODE_OPTIONS=--max_old_space_size=16384 node_modules/.bin/webpack --mode production --config webpack.prod.mjs",
-    "devstart": "yarn run nearley && yarn run sass --watch & yarn run nodemon & yarn run webpack-dev-server & yarn run tailwind:watch & yarn run webpack --watch & npx tailwindcss -i ./src/css/stylesheet.css -o ./public/css/stylesheet.css --watch=always",
-    "setup": "yarn run nearley && yarn run webpack --progress && node --max-old-space-size=8192 force_update.js",
+    "ci-build": "npm run nearley && tsc -b && NODE_OPTIONS=--max_old_space_size=16384 node_modules/.bin/webpack --mode production --config webpack.prod.mjs",
+    "devstart": "npm run nearley --watch & npm run nodemon & npm run webpack-dev-server & npm run tailwind:watch & npm run webpack --watch & npx tailwindcss -i ./src/css/stylesheet.css -o ./public/css/stylesheet.css --watch=always",
+    "setup": "npm run nearley && npm run webpack --progress && node --max-old-space-size=8192 force_update.js",
     "cards": "node --max-old-space-size=8192 force_update.js",
     "download-model": "node --max-old-space-size=8192 jobs/download_model.js",
-    "start": "yarn install --immutable && yarn run cards && yarn run download-model && node server.js",
-    "sass": "sass scss:public/css/bootstrap --no-source-map",
+    "start": "node server.js",
+    "setup-prod": "npm install --immutable && npm run cards && npm run download-model",
     "update-draft-history": "node --max-old-space-size=8192 jobs/update_draft_history.js",
     "update-cube-history": "node --max-old-space-size=8192 jobs/update_cube_history.js",
     "update-metadata-dict": "node --max-old-space-size=8192 jobs/update_metadata_dict.js",
     "update-cards": "node --max-old-space-size=8192 jobs/update_cards.js",
-    "update-all": "yarn run update-draft-history && yarn run update-cube-history && yarn run update-metadata-dict && yarn run update-cards",
+    "update-all": "npm run update-draft-history && npm run update-cube-history && npm run update-metadata-dict && npm run update-cards",
     "update-hashes": "node --max-old-space-size=8192 jobs/repair_hashes.js",
     "upload-exports": "aws s3 sync temp/export s3://cubecobra",
-    "exports": "node --max-old-space-size=8192 jobs/export_cubes.js && node --max-old-space-size=8192 jobs/export_decks.js && node --max-old-space-size=8192 jobs/export_simple_card_dict.js && yarn run upload-exports",
+    "exports": "node --max-old-space-size=8192 jobs/export_cubes.js && node --max-old-space-size=8192 jobs/export_decks.js && node --max-old-space-size=8192 jobs/export_simple_card_dict.js && npm run upload-exports",
     "rotate-queue": "node --max-old-space-size=8192 jobs/rotate_featured.js",
     "sync-podcasts": "node --max-old-space-size=8192 jobs/update_podcasts.js",
     "start:localstack": "./scripts/local/start_localstack.sh",
-    "setup:local": "yarn start:localstack && yarn setup:local:env && yarn setup:local:localstack && yarn setup:local:files && yarn setup:local:db && yarn update-cards",
+    "setup:local": "npm start:localstack && npm setup:local:env && npm setup:local:localstack && npm setup:local:files && npm setup:local:db && npm update-cards",
     "setup:local:localstack": "./scripts/local/init_localstack.sh",
     "setup:local:env": "cp .env_EXAMPLE .env",
     "setup:local:files": "node one_shot_scripts/create_local_files.js",
     "setup:local:db": "node --max-old-space-size=8192 one_shot_scripts/createTables.js",
-    "start:dev": "yarn start:localstack && yarn devstart"
+    "start:dev": "npm start:localstack && npm devstart",
+    "publish": "npm run build && node publish.js"
   },
   "author": "Gwen Dekker",
   "license": "ISC",
@@ -55,19 +56,21 @@
   "browserslist": "> 0.5%, Firefox ESR, not dead, not IE > 0, not IE_Mob > 0, not safari < 7, not kaios > 0",
   "dependencies": {
     "@aws-sdk/client-cloudwatch-logs": "^3.433.0",
+    "@babel/plugin-transform-runtime": "^7.25.9",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@headlessui/react": "^2.1.8",
     "@primer/octicons-react": "^19.11.0",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@tensorflow/tfjs-node": "^4.12.0",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
+    "archiver": "^7.0.1",
     "assert": "^2.0.0",
     "aws-sdk": "^2.1478.0",
     "bad-words": "^3.0.4",
     "bcryptjs": "^2.4.3",
     "big-json": "^3.2.0",
     "body-parser": "^1.20.2",
-    "bootstrap": "^5.1.3",
     "chart.js": "^4.2.1",
     "chartjs-adapter-date-fns": "^3.0.0",
     "classnames": "^2.2.6",
@@ -104,6 +107,7 @@
     "nearley": "^2.19.3",
     "node-cache": "^5.1.2",
     "node-fetch": "^2.7.0",
+    "node-gyp": "^11.0.0",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.4.16",
     "on-finished": "^2.3.0",
@@ -136,10 +140,9 @@
     "rss": "^1.2.2",
     "rss-parser": "^3.13.0",
     "sanitize-html": "^2.11.0",
-    "sass": "^1.44.0",
     "seedrandom": "^3.0.5",
     "serialize-javascript": "^6.0.2",
-    "sharp": "^0.33.4",
+    "sharp": "^0.33.5",
     "shuffle-seed": "^1.1.6",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
@@ -194,5 +197,5 @@
     "webpack-dev-server": "^5.0.4",
     "webpack-node-externals": "^3.0.0"
   },
-  "packageManager": "yarn@4.4.0"
+  "packageManager": "npm@4.4.0"
 }
