--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cubecobra",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "",
   "private": true,
   "main": "app.js",
@@ -25,7 +25,7 @@
     "test:watch": "npm run webpack --watch & npm run test-loud --watch --verbose false",
     "nearley": "sh nearley/helper.sh",
     "ci-build": "npm run nearley && tsc -b && NODE_OPTIONS=--max_old_space_size=16384 node_modules/.bin/webpack --mode production --config webpack.prod.mjs",
-    "devstart": "npm run nearley --watch & npm run nodemon & npm run webpack-dev-server & npm run tailwind:watch & npm run webpack --watch & npx tailwindcss -i ./src/css/stylesheet.css -o ./public/css/stylesheet.css --watch=always",
+    "devstart": "npm run nearley --watch & npm run nodemon & npm run webpack-dev-server & npm run tailwind:watch & npx tailwindcss -i ./src/css/stylesheet.css -o ./public/css/stylesheet.css --watch=always",
     "setup": "npm run nearley && npm run webpack --progress && node --max-old-space-size=8192 force_update.js",
     "cards": "node --max-old-space-size=8192 force_update.js",
     "download-model": "node --max-old-space-size=8192 jobs/download_model.js",
