--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cubecobra",
-  "version": "1.0.8",
+  "version": "1.0.11",
   "description": "",
   "private": true,
   "main": "app.js",
@@ -124,6 +124,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.0.3",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-markdown": "^9.0.1",
     "react-player": "^2.6.1",
     "react-qr-code": "^2.0.15",
@@ -175,6 +176,7 @@
     "@types/react": "^18.3.3",
     "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18.3.0",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/react-timeago": "^4.1.7",
     "@types/shuffle-seed": "^1.1.3",
