--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.1.0",
     "forever-monitor": "^1.7.2",
+    "github-slugger": "^2.0.0",
     "html-to-text": "^9.0.5",
     "http": "0.0.1-security",
     "JSONStream": "^1.3.5",
@@ -131,9 +132,7 @@
     "react-syntax-highlighter": "^15.3.0",
     "react-timeago": "^7.1.0",
     "redis": "^3.1.2",
-    "rehype-autolink-headings": "^7.1.0",
     "rehype-katex": "^7.0.0",
-    "rehype-slug": "^6.0.0",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
