--- a/package.json
+++ b/package.json
@@ -185,6 +185,9 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "eslint": "^9.11.1",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.9.0",
     "nodemon": "^3.1.4",
     "postcss": "^8.4.47",
