--- a/package.json
+++ b/package.json
@@ -166,12 +166,14 @@
     "@babel/preset-react": "^7.24.7",
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.8.0",
+    "@playwright/test": "^1.49.1",
     "@react-mock/fetch": "^0.3.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.0",
     "@types/core-js": "^2.5.8",
     "@types/eslint__js": "^8.42.3",
     "@types/nearley": "^2.11.5",
+    "@types/node": "^22.10.3",
     "@types/react": "^18.3.3",
     "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18.3.0",
