--- a/.env_EXAMPLE
+++ b/.env_EXAMPLE
@@ -20,6 +20,7 @@ PATREON_CLIENT_SECRET=""
 PATREON_HOOK_SECRET=""
 PATREON_REDIRECT=""
 PORT="5000"
+TEST_USER_PASSWORD=""
 REDIS_HOST="redis://localhost:6379"
 REDIS_SETUP="true"
 SECRET="secret"
