--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,7 +8,7 @@ jobs:
     timeout-minutes: 30
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
           node-version: 20
@@ -16,7 +16,19 @@ jobs:
         run: corepack enable
       - name: Setup
         run: npm ci
-      - name: Check Code Style
-        run: npm run lint
+      - name: Run eslint on changed files
+        uses: tj-actions/eslint-changed-files@v25
+        with:
+          config_path: 'eslint.config.mjs'
+          extra_args: '--max-warnings=0'
+      - name: Run Prettier on changed files
+        # Always run both eslint and prettier
+        uses: EPMatt/reviewdog-action-prettier@v1
+        with:
+          fail_on_error: true
+          filter_mode: file
+          level: warning
+          prettier_flags: '**/*.{js,jsx,ts,tsx}'
+          reporter: github-pr-check
       - name: Build
         run: npm run ci-build
