Switch to filter mode file, so that the entirety of any changed file is reported in the results.
The default is added, so only the exact lines changed are reported.

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -37,9 +37,10 @@ jobs:
         if: always()
         uses: EPMatt/reviewdog-action-prettier@v1
         with:
-          reporter: github-pr-check
-          level: warning
           fail_on_error: true
+          filter_mode: file
+          level: warning
           prettier_flags: '**/*.{js,jsx,ts,tsx}'
+          reporter: github-pr-check
       - name: Build
         run: npm run ci-build
