--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,9 +1,10 @@
 name: CI Tests
 
-# Pull request will trigger when PR is opened or updated, and more (https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows#pull_request)
+# Pull request will trigger when PR is opened or updated, and more (https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows#pull_request_target)
+# pull_request_target has more permissions than pull_request, allowing steps to update the PR with annotations for example
 # Thus limit push checks to master branch so things run after the PR is merged. Without the limit multiple actions run on each PR
 on:
-  pull_request:
+  pull_request_target:
   push:
     branches:
       - 'master'
@@ -12,9 +13,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    permissions:
-      contents: read
-      pull-requests: write
 
     steps:
       - uses: actions/checkout@v4
