--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,10 +1,9 @@
 name: CI Tests
 
-# Pull request will trigger when PR is opened or updated, and more (https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows#pull_request_target)
-# pull_request_target has more permissions than pull_request, allowing steps to update the PR with annotations for example
+# Pull request will trigger when PR is opened or updated, and more (https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows#pull_request)
 # Thus limit push checks to master branch so things run after the PR is merged. Without the limit multiple actions run on each PR
 on:
-  pull_request_target:
+  pull_request:
   push:
     branches:
       - 'master'
@@ -13,6 +12,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    # Permissions based on https://github.com/reviewdog/action-suggester?tab=readme-ov-file#required-permissions,
+    # and the test steps depend on reviewdog
+    permissions:
+      contents: read
+      checks: write
+      issues: write
+      pull-requests: write
 
     steps:
       - uses: actions/checkout@v4
@@ -38,7 +44,7 @@ jobs:
         # Always run both eslint and prettier
         if: always()
         # Ref: https://github.com/EPMatt/reviewdog-action-prettier
-        uses: recitalsoftware/reviewdog-action-prettier@main
+        uses: EPMatt/reviewdog-action-prettier@v1
         with:
           fail_on_error: true
           filter_mode: file
