--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules"],
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "build",
     "esModuleInterop": true,
     "target": "ES2020",
     "jsx": "react",
