Lock the deploy github actions to only the base dekkerglen/CubeCobra repo.
Forks are trying to run dev_deploy after syncing master, which
thankfully isn't working due to a deprecated actions/upload-artifact
version.

--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -19,7 +19,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' && github.repository == 'dekkerglen/CubeCobra' }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
