--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "rotate-queue": "node --max-old-space-size=8192 jobs/rotate_featured.js",
     "sync-podcasts": "node --max-old-space-size=8192 jobs/update_podcasts.js",
     "start:localstack": "./scripts/local/start_localstack.sh",
-    "setup:local": "npm start:localstack && npm setup:local:env && npm setup:local:localstack && npm setup:local:files && npm setup:local:db && npm update-cards",
+    "setup:local": "npm run start:localstack && npm run setup:local:env && npm run setup:local:localstack && npm run setup:local:files && npm run setup:local:db && npm run update-cards",
     "setup:local:localstack": "./scripts/local/init_localstack.sh",
     "setup:local:env": "cp .env_EXAMPLE .env",
     "setup:local:files": "node scripts/create_local_files.js",
