--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "github-slugger": "^2.0.0",
     "html-to-text": "^9.0.5",
     "http": "0.0.1-security",
+    "jimp": "^1.6.0",
     "JSONStream": "^1.3.5",
     "lodash": "^4.17.21",
     "micromark": "^4.0.0",
