--- a/.github/workflows/image-push.yml
+++ b/.github/workflows/image-push.yml
@@ -10,6 +10,10 @@ jobs:
     name: Build and Push to ECR
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      id-token: write
+
     env:
       role: arn:aws:iam::123456789012:role/replace-me
       region: us-east-2
