feat: get the repository from the cloudformation stack

--- a/.github/workflows/image-push.yml
+++ b/.github/workflows/image-push.yml
@@ -1,5 +1,9 @@
 name: Build and Push Docker Image to ECR
 
+permissions:
+  contents: read
+  id-token: write
+
 on:
   push:
     branches:
@@ -10,14 +14,9 @@ jobs:
     name: Build and Push to ECR
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: read
-      id-token: write
-
     env:
-      role: arn:aws:iam::123456789012:role/replace-me
-      region: us-east-2
-      repository: "replace-me!"
+      role: ${{ secrets.GITHUB_ROLE_ARN }}
+      region: us-east-1
 
     steps:
       - uses: actions/checkout@v4
@@ -27,12 +26,19 @@ jobs:
           role-to-assume: ${{ env.role }}
           aws-region: ${{ env.region }}
 
+      - run: |
+          ECR_REPO_NAME=$(aws cloudformation describe-stacks \
+            --stack-name CubeCobraDevStack \
+            --query "Stacks[0].Outputs[?OutputKey=='EcrRepositoryName'].OutputValue" \
+            --output text)
+
+          echo "ECR_REPO_NAME=${ECR_REPO_NAME}" >> $GITHUB_ENV
+
       - id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
       - env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: ${{ env.repository }}
         run: |
-          docker build -t $REGISTRY/$REPOSITORY:latest .
-          docker push $REGISTRY/$REPOSITORY:latest
+          docker build -t $REGISTRY/$ECR_REPO_NAME:latest .
+          docker push $REGISTRY/$ECR_REPO_NAME:latest
