--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,6 +10,8 @@ on:
 
 jobs:
   build:
+    if: github.repository == 'dekkerglen/CubeCobra'
+
     runs-on: ubuntu-latest
     timeout-minutes: 30
 
