move jobs to src, migrate carddb to ts

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cubecobra",
-  "version": "1.0.36",
+  "version": "1.0.37",
   "description": "",
   "private": true,
   "main": "app.js",
@@ -24,19 +24,19 @@
     "devstart": "npm run nearley --watch & npm run nodemon & npm run webpack-dev-server & npm run tailwind:watch & npx tailwindcss -i ./src/client/css/stylesheet.css -o ./public/css/stylesheet.css --watch=always",
     "setup": "npm run nearley && npm run webpack --progress && node --max-old-space-size=8192 force_update.js",
     "cards": "node --max-old-space-size=8192 force_update.js",
-    "download-model": "node --max-old-space-size=8192 jobs/download_model.js",
+    "download-model": "node --max-old-space-size=8192 src/jobs/download_model.js",
     "start": "node server.js",
     "setup-prod": "npm install --immutable && npm run cards && npm run download-model",
-    "update-draft-history": "node --max-old-space-size=8192 jobs/update_draft_history.js",
-    "update-cube-history": "node --max-old-space-size=8192 jobs/update_cube_history.js",
-    "update-metadata-dict": "node --max-old-space-size=8192 jobs/update_metadata_dict.js",
-    "update-cards": "node --max-old-space-size=8192 jobs/update_cards.js",
+    "update-draft-history": "ts-node src/jobs/update_draft_history.ts",
+    "update-cube-history": "node --max-old-space-size=8192 src/jobs/update_cube_history.js",
+    "update-metadata-dict": "node --max-old-space-size=8192 src/jobs/update_metadata_dict.js",
+    "update-cards": "node --max-old-space-size=8192 src/jobs/update_cards.js",
     "update-all": "npm run update-draft-history && npm run update-cube-history && npm run update-metadata-dict && npm run update-cards",
-    "update-hashes": "node --max-old-space-size=8192 jobs/repair_hashes.js",
+    "update-hashes": "node --max-old-space-size=8192 src/jobs/repair_hashes.js",
     "upload-exports": "aws s3 sync temp/export s3://cubecobra",
-    "exports": "node --max-old-space-size=8192 jobs/export_cubes.js && node --max-old-space-size=8192 jobs/export_decks.js && node --max-old-space-size=8192 jobs/export_simple_card_dict.js && npm run upload-exports",
-    "rotate-queue": "node --max-old-space-size=8192 jobs/rotate_featured.js",
-    "sync-podcasts": "node --max-old-space-size=8192 jobs/update_podcasts.js",
+    "exports": "node --max-old-space-size=8192 src/jobs/export_cubes.js && node --max-old-space-size=8192 src/jobs/export_decks.js && node --max-old-space-size=8192 src/jobs/export_simple_card_dict.js && npm run upload-exports",
+    "rotate-queue": "node --max-old-space-size=8192 src/jobs/rotate_featured.js",
+    "sync-podcasts": "node --max-old-space-size=8192 src/jobs/update_podcasts.js",
     "start:localstack": "./scripts/local/start_localstack.sh",
     "setup:local": "npm run start:localstack && npm run setup:local:env && npm run setup:local:localstack && npm run setup:local:files && npm run setup:local:db && npm run update-cards",
     "setup:local:localstack": "./scripts/local/init_localstack.sh",
@@ -72,6 +72,7 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@headlessui/react": "^2.1.8",
     "@primer/octicons-react": "^19.11.0",
+    "@scryfall/api-types": "^1.0.0-alpha.4",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-node": "^4.22.0",
@@ -183,8 +184,10 @@
     "@react-mock/fetch": "^0.3.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.0",
+    "@types/big-json": "^3.2.5",
     "@types/core-js": "^2.5.8",
     "@types/eslint__js": "^8.42.3",
+    "@types/event-stream": "^4.0.5",
     "@types/nearley": "^2.11.5",
     "@types/react": "^18.3.3",
     "@types/react-csv": "^1.1.10",
