add draftbots script

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cubecobra",
-  "version": "1.0.37",
+  "version": "1.0.42",
   "description": "",
   "private": true,
   "main": "app.js",
@@ -44,7 +44,8 @@
     "setup:local:files": "node scripts/create_local_files.js",
     "setup:local:db": "node --max-old-space-size=8192 scripts/createTables.js",
     "start:dev": "npm run start:localstack && npm run devstart",
-    "publish": "npm run build && node ./scripts/publish.js"
+    "publish": "npm run build && node ./scripts/publish.js",    
+    "postinstall": "node ./scripts/setup-aliases.js"
   },
   "_moduleAliases": {
     "analytics": "build/client/analytics",
