--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src/**/*.js", "src/**/*.ts", "src/**/*.tsx", "server.js"],
+  "include": ["src/**/*.js", "src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules"],
   "compilerOptions": {
     "typeRoots": [
