--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "setup:local:files": "node scripts/create_local_files.js",
     "setup:local:db": "node --max-old-space-size=8192 scripts/createTables.js",
     "start:dev": "npm run start:localstack && npm run devstart",
-    "publish": "npm run build && node ./scripts/publish.js",    
+    "publish": "npm run build && node ./scripts/publish.js",
     "postinstall": "node ./scripts/setup-aliases.js"
   },
   "_moduleAliases": {
@@ -185,7 +185,9 @@
     "@react-mock/fetch": "^0.3.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.0",
+    "@types/aws-sdk2-types": "^0.0.5",
     "@types/big-json": "^3.2.5",
+    "@types/clone": "^2.1.4",
     "@types/core-js": "^2.5.8",
     "@types/eslint__js": "^8.42.3",
     "@types/event-stream": "^4.0.5",
@@ -197,6 +199,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/react-timeago": "^4.1.7",
     "@types/shuffle-seed": "^1.1.3",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "autoprefixer": "^10.4.20",
