move files to ts

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cubecobra",
-  "version": "1.0.46",
+  "version": "1.0.47",
   "description": "",
   "private": true,
   "main": "app.js",
@@ -27,10 +27,10 @@
     "download-model": "node --max-old-space-size=8192 src/jobs/download_model.js",
     "start": "node server.js",
     "setup-prod": "npm install --immutable && npm run cards && npm run download-model",
-    "update-draft-history": "ts-node src/jobs/update_draft_history.ts",
-    "update-cube-history": "node --max-old-space-size=8192 src/jobs/update_cube_history.js",
-    "update-metadata-dict": "node --max-old-space-size=8192 src/jobs/update_metadata_dict.js",
-    "update-cards": "node --max-old-space-size=8192 src/jobs/update_cards.js",
+    "update-draft-history": "NODE_OPTIONS=--max_old_space-size=18192 ts-node src/jobs/update_draft_history.ts",
+    "update-cube-history": "NODE_OPTIONS=--max_old_space-size=18192 ts-node src/jobs/update_cube_history.ts",
+    "update-metadata-dict": "NODE_OPTIONS=--max_old_space-size=18192 ts-node src/jobs/update_metadata_dict.ts",
+    "update-cards": "NODE_OPTIONS=--max_old_space-size=18192 ts-node src/jobs/update_cards.ts",
     "update-all": "npm run update-draft-history && npm run update-cube-history && npm run update-metadata-dict && npm run update-cards",
     "update-hashes": "node --max-old-space-size=8192 src/jobs/repair_hashes.js",
     "upload-exports": "aws s3 sync temp/export s3://cubecobra",
