--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "dynamodb-store": "^1.2.0",
     "elo-rating": "^1.0.1",
     "email-templates": "^12.0.1",
+    "emoji-regex": "^10.4.0",
     "event-stream": "^4.0.1",
     "events": "^3.3.0",
     "express": "^4.18.2",
