--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "nodemon": "nodemon --exec ts-node --ignore src/client --ignore public --ignore private --ignore temp --ignore dist/pages --ignore __tests__ src/app.js",
     "webpack": "NODE_OPTIONS=--max_old_space-size=18192 webpack --mode production --config webpack.prod.mjs",
     "webpack-dev-server": "NODE_OPTIONS=--max_old_space-size=18192 npx webpack serve --config webpack.dev.mjs",
-    "test": "npm run test-loud --silent",
-    "test:watch": "npm run webpack --watch & npm run test-loud --watch --verbose false",
     "nearley": "sh nearley/helper.sh",
     "ci-build": "npm run nearley && tsc -b && NODE_OPTIONS=--max_old_space_size=16384 node_modules/.bin/webpack --mode production --config webpack.prod.mjs",
     "devstart": "npm run nearley --watch & npm run nodemon & npm run webpack-dev-server & npm run tailwind:watch & npx tailwindcss -i ./src/client/css/stylesheet.css -o ./public/css/stylesheet.css --watch=always",
@@ -45,7 +43,11 @@
     "setup:local:db": "node --max-old-space-size=8192 scripts/createTables.js",
     "start:dev": "npm run start:localstack && npm run devstart",
     "publish": "npm run build && node ./scripts/publish.js",
-    "postinstall": "node ./scripts/setup-aliases.js"
+    "postinstall": "node ./scripts/setup-aliases.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage"
   },
   "_moduleAliases": {
     "analytics": "build/client/analytics",
@@ -179,10 +181,12 @@
     "@babel/plugin-transform-optional-chaining": "^7.24.8",
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.26.0",
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.8.0",
     "@react-mock/fetch": "^0.3.0",
     "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.0",
     "@types/aws-sdk2-types": "^0.0.5",
     "@types/big-json": "^3.2.5",
@@ -190,6 +194,7 @@
     "@types/core-js": "^2.5.8",
     "@types/eslint__js": "^8.42.3",
     "@types/event-stream": "^4.0.5",
+    "@types/jest": "^29.5.14",
     "@types/nearley": "^2.11.5",
     "@types/react": "^18.3.3",
     "@types/react-csv": "^1.1.10",
@@ -209,11 +214,14 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.9.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.4",
     "postcss": "^8.4.47",
     "raw-loader": "^4.0.2",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.13",
+    "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
