--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
   "compilerOptions": {
     "typeRoots": [
       "node_modules/@types",
-      "src/types"
+      "src/types",
+      "node_modules/@testing-library"
     ],
     "outDir": "build",
     "esModuleInterop": true,
