build: adjust permissions so to write comments

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,5 +1,11 @@
 name: CI Tests
 
+permissions:
+  contents: write
+  pull-requests: write
+  repository-projects: write
+  checks: write
+
 # Pull request will trigger when PR is opened or updated, and more (https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows#pull_request)
 # Thus limit push checks to master branch so things run after the PR is merged. Without the limit multiple actions run on each PR
 on:
@@ -37,6 +43,7 @@ jobs:
           config_path: 'eslint.config.mjs'
           extra_args: '--max-warnings=0'
           reporter: github-pr-review
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run Prettier on changed files
         # Always run both eslint and prettier
@@ -48,6 +55,7 @@ jobs:
           level: warning
           prettier_flags: '**/*.{js,jsx,ts,tsx}'
           reporter: github-pr-review
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run tests
         if: success()
@@ -56,6 +64,8 @@ jobs:
       - name: Jest Coverage Comment
         if: success()
         uses: MishaKav/jest-coverage-comment@main
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload Jest Coverage Report
         if: success()
