--- a/.env_EXAMPLE
+++ b/.env_EXAMPLE
@@ -27,8 +27,6 @@ SESSION_SECRET="session_secret"
 SESSION="session"
 TCG_PLAYER_PRIVATE_KEY=""
 TCG_PLAYER_PUBLIC_KEY=""
-CACHE_ENABLED="false"
-AUTOSCALING_GROUP=""
-CACHE_SECRET=""
 CAPTCHA_SITE_KEY=""
 CAPTCHA_SECRET_KEY=""
+DRAFTMANCER_API_KEY="apikey"
