--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,json,css,scss,md}": [
+    "*.{ts,tsx}": [
       "prettier --write",
       "eslint --fix"
     ]
@@ -229,6 +229,7 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.4.0",
     "nodemon": "^3.1.4",
     "postcss": "^8.4.47",
     "raw-loader": "^4.0.2",
