--- a/package.json
+++ b/package.json
@@ -215,6 +215,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/react-timeago": "^4.1.7",
     "@types/shuffle-seed": "^1.1.3",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
@@ -234,6 +235,7 @@
     "postcss": "^8.4.47",
     "raw-loader": "^4.0.2",
     "style-loader": "^4.0.0",
+    "supertest": "^7.0.0",
     "tailwindcss": "^3.4.13",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
