Revert mdast-util-gfm-autolink-literal from 2.0.1 to 2.0.0 so regular expressions don't use features incompatible with older Safari/Chrome.

--- a/package.json
+++ b/package.json
@@ -245,5 +245,8 @@
     "webpack-dev-server": "^5.0.4",
     "webpack-node-externals": "^3.0.0"
   },
-  "packageManager": "npm@4.4.0"
+  "packageManager": "npm@4.4.0",
+  "overrides": {
+    "mdast-util-gfm-autolink-literal": "2.0.0"
+  }
 }
