--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -42,22 +42,44 @@ jobs:
       - name: Run eslint on changed files
         # Always run both eslint and prettier
         if: always()
-        uses: tj-actions/eslint-changed-files@v25
+        run: npm run lint:eslint > eslint.out
+      - name: Upload eslint Report
+        if: always()
+        continue-on-error: true
+        uses: actions/upload-artifact@v4
         with:
-          config_path: 'eslint.config.mjs'
-          extra_args: '--max-warnings=0'
-          reporter: github-pr-review
+          name: eslint.out
 
       - name: Run Prettier on changed files
         # Always run both eslint and prettier
         if: always()
-        uses: ./.github/actions/prettier
+        run: npm run lint:prettier > prettier.out
+      - name: Upload Prettier Report
+        if: always()
+        continue-on-error: true
+        uses: actions/upload-artifact@v4
         with:
-          fail_on_error: true
-          filter_mode: file
-          level: warning
-          prettier_flags: '**/*.{js,jsx,ts,tsx}'
-          reporter: github-pr-review
+          name: prettier.out
+            
+      # - name: Run eslint on changed files
+      #   # Always run both eslint and prettier
+      #   if: always()
+      #   uses: tj-actions/eslint-changed-files@v25
+      #   with:
+      #     config_path: 'eslint.config.mjs'
+      #     extra_args: '--max-warnings=0'
+      #     reporter: github-pr-review
+
+      # - name: Run Prettier on changed files
+      #   # Always run both eslint and prettier
+      #   if: always()
+      #   uses: ./.github/actions/prettier
+      #   with:
+      #     fail_on_error: true
+      #     filter_mode: file
+      #     level: warning
+      #     prettier_flags: '**/*.{js,jsx,ts,tsx}'
+      #     reporter: github-pr-review
 
       - name: Run tests
         if: success()
