--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build-client": "npm run nearley && tsc -b && npm run webpack && npx tailwindcss -i ./src/client/css/stylesheet.css -o ./public/css/stylesheet.css",
     "build-server": "tsc -p tsconfig.json",
     "build": "npm run build-client && npm run build-server",
-    "lint": "npx prettier --check $(npm run --silent list-files); npx eslint --max-warnings 0 $(npm run --silent list-files)",
+    "lint": "npm run lint:prettier; npm run lint:eslint",
+    "lint:prettier": "npx prettier --check $(npm run --silent list-files)",
+    "lint:eslint": "npx eslint --max-warnings 0 $(npm run --silent list-files)",
     "list-files": "bash -c 'shopt -s nullglob\n echo {jobs,scripts,src}/{**/*,*}.{js,jsx,ts,tsx} force_update.js webpack.*.mjs eslint.config.mjs babel.config.mjs'",
     "bash": "bash",
     "nodemon": "nodemon --exec ts-node --ignore src/client --ignore public --ignore private --ignore temp --ignore dist/pages --ignore __tests__ src/app.js",
